# gavel

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  gavel_bench.cpp  histogram.hpp  pmu.hpp  timer.hpp  workload.hpp
data/20200130/fidelity/: AAPL.txt  AMD.txt  CSCO.txt  INTC.txt  MSFT.txt  TSLA.txt
docs/: architecture.md  benchmark-report.md  design.md  lessons-learned.md  semantics.md  technical-deep-dive.md
include/gavel/: book.hpp  contracts.hpp  engine.hpp  hash.hpp  idmap.hpp  input.hpp  output.hpp  pool.hpp  spsc.hpp  stream.hpp  types.hpp
include/gavel/itch/: extract.hpp  itch.hpp
include/gavel/verify/: generator.hpp  invariants.hpp  shadow.hpp
repros/: repro_auction_mix_seed3.stream  repro_default_seed1.stream  repro_default_seed5.stream  repro_iceberg_sweep_seed3.stream  repro_peg_heavy_seed2.stream  repro_stop_cascade_seed4.stream
results/: hardening_h0.jsonl  hardening_h1.jsonl  itch_latency.jsonl  itch_throughput.jsonl  latency.jsonl  throughput.jsonl
scripts/: get_data.sh  soak.sh
src/: engine.cpp  match.cpp
tests/: CMakeLists.txt  dst_test.cpp  engine_semantics_test.cpp  histogram_test.cpp  idmap_test.cpp  itch_test.cpp  smoke_test.cpp  spsc_test.cpp
tools/: CMakeLists.txt  gavel_extract.cpp  gavel_fidelity.cpp  gavel_replay.cpp  gavel_sim.cpp
